Ensure that images disappear when they go out of boundary

--- a/wp-content/themes/number-quarto/style.css
+++ b/wp-content/themes/number-quarto/style.css
@@ -348,6 +348,7 @@ a:active {
     position: relative;
     background: #080000 url(/images/number_background.jpg) center top repeat-x;
     height: 496px;
+    overflow: hidden;
 }
 #number_quarto_title {
     position: absolute;
